# huffman

./: .gitignore  README.md
huffman/: CMakeLists.txt  Node.cpp  Node.h  Tree.cpp  main.cpp
huffman/src/heap/: Heap.cpp  Heap.h
huffman/src/tree/: Node.cpp  Node.h  Tree.cpp  Tree.h
